--- a/openassessment/templates/openassessmentblock/oa_uploaded_file.html
+++ b/openassessment/templates/openassessmentblock/oa_uploaded_file.html
@@ -1,7 +1,7 @@
 {% spaceless %}
 {% load i18n %}
 
-{% if file_upload_type %}
+{% if file_upload_type and file_url %}
     {% if header %}
         <header class="{{ class_prefix }}__display__header">
             <h3 class="{{ class_prefix }}__display__title">
